remove performance testing from repo

--- a/test/fixtures/eapi.conf
+++ b/test/fixtures/eapi.conf
@@ -1,15 +1,5 @@
-[connection:test1]
-host: 192.168.1.16
-username: eapi
-password: password
-tags: tag1, tag2
-
-[connection:test2]
-username: eapi
-password: password
-tags: tag1
-
-[connection:localhost]
-username: eapi
-password: password
-
+[connection:veos01]
+host: 172.16.130.201
+username: admin
+password: admin
+transport: http
