--- a/test/fixtures/dut.conf
+++ b/test/fixtures/dut.conf
@@ -1,5 +1,5 @@
 [connection:veos01]
-host: 192.168.1.16
-username: eapi
-password: password
+host: 172.16.130.201
+username: admin
+password: admin
 transport: http
